# chuva

./: .gitignore  Cargo.toml  README.md
caveman/: Cargo.toml  README
caveman/src/: lib.rs
chuva/: Cargo.toml
chuva/src/: lib.rs  load.rs
dataset/: Cargo.toml
dataset/src/: lib.rs
download-dataset/: README  knmi_precip_nowcast_latest.py
etc/systemd/: download-dataset.service  download-dataset.timer  moros.service  moros.socket
moros/: Cargo.toml  README
moros/asset/: gen_logo_png.sh  location.js  manifest.json  postcodes.fst  style.css
moros/examples/: postcode_fst.rs
moros/src/: chuva.rs  interpreter.rs  main.rs  moros.rs  ui.rs  util.rs
moros/templates/: app.html.jinja  base.html.jinja  index.html.jinja  info.html.jinja  norain.html.jinja  prediction.html.jinja  prediction.txt.jinja
moros/templates/static/: app.js  location.js  style.css
postcode-fst/: Cargo.toml  README
postcode-fst/src/: main.rs
