[package]
name = "caveman"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.7.0", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1.17", default-features = false, features = ["http1", "server-graceful"] }
http = { version = "1.3.1", default-features = false, features = ["std"] }

tokio = { version = "1.47.1", default-features = false, features = ["signal", "macros"] }
bytes = { version = "1.10.1", default-features = false, features = ["std"] }
