[package]
name = "chuva"
version = "0.1.0"
edition = "2024"

[dependencies]
dataset = { version = "0.1.0", default-features = false, features = ["load"], path = "../dataset" }
caveman = { version = "0.1.0", default-features = false, path = "../caveman" }

jiff = { workspace = true }

fst = { version = "0.4.7", default-features = false }
askama = { version = "0.14.0", default-features = false, features = ["blocks", "derive", "std"] }
tokio = { version = "1.47.1", default-features = false, features = ["net", "rt"] }
listenfd = { version = "1.0.2", default-features = false }
